tests/snapshots/e2e__feature_tests__nvmrc__PowerShell.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
$ErrorActionPreference = "Stop"
fnm env | Out-String | Invoke-Expression
echo 'v8.11.3' > '.nvmrc'
fnm install
fnm use
If ("$(node -v)" -ne "v8.11.3") {
    Write-Output ('Expected Node version to be "v8.11.3", Got: ' + $(node -v))
    exit 1
}
